testsuite/tests/should_fail/LoopingPair.sf
let rec loop (n : Int) : Int = loop n in
(loop 1, 2)._2